--- a/Nivel 2/index.html
+++ b/Nivel 2/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,800;1,400&display=swap" rel="stylesheet">  
     <!--CUSTOM CSS-->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 
@@ -79,7 +79,7 @@
     
     </div>
 
-    <script src="main.js"></script>
+    <script src="scripts/main.js"></script>
     
 </body>
 </html>
